--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "esbuild": "^0.17.2",
+    "leaflet": "^1.9.3",
+    "ol": "^7.2.2",
+    "ol-layerswitcher": "^4.1.0",
     "sass": "^1.57.1"
   },
   "scripts": {
