Edits, mainly index.html.erb

--- a/.nova/Configuration.json
+++ b/.nova/Configuration.json
@@ -1,3 +1,4 @@
 {
-  "tommasonegri.solargraph.internals.server.error" : true
+  "tommasonegri.solargraph.internals.server.error" : true,
+  "workspace.color" : 9
 }
